--- a/index.html
+++ b/index.html
@@ -3,14 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Symbols+Outlined">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/css/bootstrap.min.css' integrity='sha512-Z/def5z5u2aR89OuzYcxmDJ0Bnd5V1cKqBEbvLOiUNWdg9PQeXVvXLI90SE4QOHGlfLqUnDNVAYyZi8UwUTmWQ==' crossorigin='anonymous'/>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.css' integrity='sha512-AZtJoEn5SfSZimv10x5NMO2gaZCdoU8nxtHJK8O4SbKNlQeb1ggkvf0b0QixuuXIjX3Tp5jzBbTWajki81Vl2g==' crossorigin='anonymous'/> 
+    <link rel='stylesheet' href="styles/main.css">
+    <link rel = "icon" type = "image/x-icon" href="favicon.ico">
     <title>Final Project</title>
 </head>
 <body style="background-color:lightblue">
     <div class="navbar" style="background-color:rgb(59, 59, 197);">
         <button><img src=""></button>
         <center><button><img src="numbers.png" style="height: 50px; width: 50px;"></button></center>
-        <button><img src=""> 23</button>
+        <button id="menuButton" data-bs-toggle="collapse" data-bs-target="#menuContent"><img src="">Menu</button>
         <button style="right: 100%;"><img src=""> hi</button>
+    </div>
+    <div id="menuContent" class="collapse">
+        <ul class="list-group mb-3" id="menu">
+            <li class="list-group-item d-flex justify-content-between lh-condensed" id="menu-phone">Dial 2･1･1 or (866) 211-9966</li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed" id="menu-findHelp">FIND HELP / BUSCAR AYUDA</li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed" id="menu-dataDash">Indiana 211 Data Dashboard</li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed" id="menu-about">About Us</li>
+            <li class="list-group-item d-flex justify-content-between lh-condensed" id="menu-serviceProviders">Service Providers</li>
+        </ul>
     </div>
     <center><img src="logo.png" style="text-align:center;"></center>
     <p style="text-align: center;">Get Connected, Get Help!<br>
@@ -28,5 +42,26 @@
         <button>Ayuda Cerca de Mi</button>
         <button>Other Languages</button>
     </ul>
+
+
+
+
+    <!--Scripts-->
+     <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js' integrity='sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==' crossorigin='anonymous'></script> -->
+     <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.bundle.min.js' integrity='sha512-ToL6UYWePxjhDQKNioSi4AyJ5KkRxY+F1+Fi7Jgh0Hp5Kk2/s8FD7zusJDdonfe5B00Qw+B8taXxF6CFLnqNCw==' crossorigin='anonymous'></script>
+     <script src='https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js' integrity='sha512-rXm6RiYDlz+aZC/ht75tGzeAmCg4gVfBA6Be5s5uENSahiXkgwEy10J2Cc+dxUAW4lRRQYbS5pugMOqBrs8ksw==' crossorigin='anonymous'></script>
+     <!--<script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.min.js' integrity='sha512-fHY2UiQlipUq0dEabSM4s+phmn+bcxSYzXP4vAXItBvBHU7zAM/mkhCZjtBEIJexhOMzZbgFlPLuErlJF2b+0g==' crossorigin='anonymous'></script>-->
+     <script defer src="/__/firebase/10.4.0/firebase-app-compat.js"></script>
+     <!-- <script defer src="/__/firebase/10.4.0/firebase-auth-compat.js"></script>
+     <script defer src="/__/firebase/10.4.0/firebase-database-compat.js"></script>-->
+     <script defer src="/__/firebase/10.4.0/firebase-firestore-compat.js"></script>
+     <!--<script defer src="/__/firebase/10.4.0/firebase-functions-compat.js"></script>
+     <script defer src="/__/firebase/10.4.0/firebase-messaging-compat.js"></script>
+     <script defer src="/__/firebase/10.4.0/firebase-storage-compat.js"></script>
+     <script defer src="/__/firebase/10.4.0/firebase-analytics-compat.js"></script>
+     <script defer src="/__/firebase/10.4.0/firebase-remote-config-compat.js"></script>
+     <script defer src="/__/firebase/10.4.0/firebase-performance-compat.js"></script>-->
+     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+     <script src="scripts/main.js"></script>
 </body>
 </html>
