--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Indiana 2･1･1</title>
 
     <!-- update the version number as needed -->
@@ -23,5 +25,22 @@
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h1>
+        Get Connected, Get Help!
+      </h1>
+      <p>
+        Indiana 2･1･1 provides services for Hoosiers looking for housing, food, to contribute to their local communities, and more!
+      </p>
+      <p>
+        Please call 2･1･1 or select Find Help Near Me to receive assistance.
+      </p>
+    </div>
+    <div>
+      <button>Find Help Near Me</button>
+      <button>Buscar Ayuda Cerca de Mi</button>
+      <button>Other Languages ･ Otros Idiomas</button>
+    </div>
+  </body>
 </html>
